--- a/Endabgabe/firework.html
+++ b/Endabgabe/firework.html
@@ -11,10 +11,9 @@
         }
     </style>
     <link rel="stylesheet" href="firework.css" type="text/css" media="screen" />
-    <script src="rectangle.js" type="text/javascript" charset="utf-8"></script>
-    <script src="heart.js" type="text/javascript" charset="utf-8"></script>
-    <script src="circle.js" type="text/javascript" charset="utf-8"></script>
     <script src="Vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="particle.js" type="text/javascript" charset="utf-8"></script>
+    <script src="MoveableObject.js" type="text/javascript" charset="utf-8"></script>
     <script src="main.js" type="text/javascript" charset="utf-8"></script>
     <script src="firework.js" type="text/javascript" charset="utf-8"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
