--- a/Endabgabe/firework.html
+++ b/Endabgabe/firework.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="firework.css" type="text/css" media="screen" />
     <script src="Vector.js" type="text/javascript" charset="utf-8"></script>
     <script src="particle.js" type="text/javascript" charset="utf-8"></script>
-    <script src="line.js" type="text/javascript" charset="utf-8"></script>
+    <script src="heart.js" type="text/javascript" charset="utf-8"></script>
     <script src="dots.js" type="text/javascript" charset="utf-8"></script>
     <script src="rectangle.js" type="text/javascript" charset="utf-8"></script>
     <script src="main.js" type="text/javascript" charset="utf-8"></script>
@@ -24,7 +24,6 @@
 <body>
     <header>
         <h1>Firework-Creator</h1>
-        <p>Create a firework-name, choose a firework-type, select the intensity of the particel, control the lifetime of the firework and choose the color!</p>
     </header>
 
     <form>
@@ -52,7 +51,8 @@
                 <select id="particleType" name="ParticleType">
                     <option value="0">rectangle</option>
                     <option value= "1" >dot</option>
-                    <option value="2" >line</option>
+                    
+                    
                 </select>
             </fieldset>
 
