--- a/Endabgabe/index.html
+++ b/Endabgabe/index.html
@@ -11,7 +11,7 @@
         }
     </style>
     <link rel="stylesheet" href="firework.css" type="text/css" media="screen" />
-    <script src="Vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="vector.js" type="text/javascript" charset="utf-8"></script>
     <script src="particle.js" type="text/javascript" charset="utf-8"></script>
     <script src="heart.js" type="text/javascript" charset="utf-8"></script>
     <script src="dots.js" type="text/javascript" charset="utf-8"></script>
